    + [NT] Use the new "do_fork()" sub to ensure works do not inherit
      the default signal handler, which could allow any number of workers
      to promote themselves to independent "masters" - effectively
      creating a fork-bomb with an ill-timed signal.
  * lib/Lintian/Util.pm:
    + [NT] Add a "do_fork()" sub to ensure signal handling is
      reset for child processes.

  * t/tests/shared-libs-non-pic-i386/debian/Makefile:
    + [JW] Pass -fno-PIE and -fno-pie to GCC, so that the test works even
      when the compiler enables PIE by default.  (Closes: #841442)

 -- Niels Thykier <niels@thykier.net>  Sat, 22 Oct 2016 13:42:28 +0000

lintian (2.5.48) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - file-name-contains-wildcard-character
      - homepage-for-cran-package-not-canonical
      - init.d-script-needs-depends-on-lsb-base
      - maintscript-includes-maint-script-parameters
    + Removed:
      - hardening-no-stackprotector

  * checks/binaries.{desc,pm}:
    + [NT] Rewrite/embed the necessary bits from hardening-check to
      implement the default hardening-no-* checks directly in lintian.
      This is because hardening-check appears to be losing its
      "home" with the coming removal of hardening-wrapper and
      hardening-includes.  (Closes: #836756)
    + [JW] Remove the hardening-no-stackprotector tag.
    + [NT] Allow "golang-any" as an alternative to "golang-go" in
      Build-Depends for detecting golang binaries.  Thanks to
      Martín Ferrari for the report and the initial patch.
      (Closes: #839228)
  * checks/changelog-file.{desc,pm}:
    + [JW] Bump threshold for improbable bug number to 2000.
  * checks/control-file.{desc,pm}:
    + [JW] Add references to tags related to build profiles.
    + [JW] Relax Build-Profiles syntax check to allow (almost) any
      characters in profile names.  Thanks to Ximin Luo for the bug report.
      (Closes: #839086)